# cpp-cross-build

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
archive/: CMakeLists.old  Dockerfile  build_linux.sh  build_macos.sh  build_windows.sh  compile-all.sh  scrip.sh
crossbuildchain/: Dockerfile  download_osxcross.sh
hello_world/: CMakeLists.txt  beforebuild.sh  build_macos.sh  build_windows.sh
hello_world/src/: helloworld.cpp
